[tool.poetry]
name = "langchain_study"
version = "0.1.0"
description = ""
authors = ["Masato Shimizu <ma6ato@gmail.com>"]
readme = "README.md"
packages = [{ include = "langchain_study", from = "src" }]

[tool.poetry.dependencies]
python = "3.11.7"
notebook = "7.1.3"
openai = "1.23.6"
langchain = "0.1.7"
pymupdf = "1.24.2"
slack-bolt = "1.18.1"
momento = "1.20.1"
boto3 = "1.34.94"
streamlit = "1.33.0"
duckduckgo-search = "4.5.0"
spacy = "3.7.4"
tiktoken = "0.6.0"
chromadb = "0.5.0"
chainlit = "1.0.506"
langchain-community = "0.0.20"
wikipedia = "1.4.0"
langchain-openai = "0.0.6"
redis = "5.0.4"
langchainhub = "0.1.15"
google-search-results = "2.4.2"
faiss-cpu = "1.8.0"
langchain-experimental = "0.0.51"
lancedb = "0.6.11"
pandas = "2.2.2"
python-dotenv = "1.0.1"
pyarrow = "14.0.2"
unstructured = { extras = ["local-inference"], version = "0.13.6" }


[tool.poetry.group.dev.dependencies]
pytest = "7.4.4"
taskipy = "1.12.2"
mypy = "1.10.0"
ruff = "0.4.2"

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
select = ["ALL"]
ignore = ["T201"]

[tool.ruff.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.per-file-ignores]
"**/{modelio,retrieval,memory,chains,agents,callbacks}/*" = [
    "T201", # allow print
    "D100", # allow missing-module-docstring
    "D101", # allow missing-function-docstring
    "D102", # allow undocumented-public-method
    "D103", # allow undocumented-public-function
    "D104", # allow undocumented-private-method
    "E501", # allow line-too-long
]
"notebooks/*" = [
    "T201", # allow print
]

[tool.ruff.pep8-naming]
classmethod-decorators = ["classmethod", "validator"]

[tool.taskipy.tasks]
test = "pytest tests"
mypy = "mypy src tests"
ruff = "task ruff-check && task ruff-format"
ruff-check = "ruff check src --fix"
ruff-format = "ruff format src"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
